make the injector find the container, and make the button pwetty pwetty

--- a/css/styles.css
+++ b/css/styles.css
@@ -298,3 +298,13 @@ table.buyBox .wishlist td.bottomLeft {
 #addToWunderlistButton.hacker-news span.wunderlist-icon {
   display:none !important;
 }
+
+/* YELP */
+
+#addToWunderlistButton.injected-yelp {
+  margin: 2px 0 0 4px;
+}
+
+#addToWunderlistButton.injected-yelp .wunderlist-icon {
+  margin: -1px 5px -4px -5px;
+}
