--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@
 
 #addToWunderlistButton span.wunderlist-icon {
   background: url(https://www.wunderlist.com/icon.png) !important;
-  display:inline-block !important;
+  display:inline-block !important;x
   background-size: 16px !important;
   width: 16px !important;
   height: 16px !important;
@@ -331,5 +331,5 @@ table.buyBox .wishlist td.bottomLeft {
 #addToWunderlistButton.tripadvisor .saves-hover-txt {
   text-shadow: 1px 1px 0 #888 !important;
   padding-left: 7px !important;
-  margin-top: 3px !important;
+  margin-top: 2px !important;
 }
