ooops, broken stylesheet

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@
 
 #addToWunderlistButton span.wunderlist-icon {
   background: url(https://www.wunderlist.com/icon.png) !important;
-  display:inline-block !important;x
+  display:inline-block !important;
   background-size: 16px !important;
   width: 16px !important;
   height: 16px !important;
